# Data_Strome2

./: .gitignore  .uvrc  AI_MODELS.md  AI_TREATMENT_FEATURE.md  API_DOCUMENTATION.md  DATA_OVERVIEW.md  DEPENDENCIES.md  DOCUMENTATION_INDEX.md  FINAL_ASSESSMENT.md  GEMINI_2.5_UPGRADE.md  GEMINI_MODEL_OPTIONS.md  GEMINI_SETUP.md  INSTALLATION_SUMMARY.md  INSTALL_COMMANDS.md  Makefile  OLAP_OVERVIEW.md  PROJECT_FEATURES.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_START_API.md  README.md  README_INSTALL.md  RESULTS_AND_METRICS.md  RUN_TESTS.md  TESTING_GUIDE.md  TESTING_IMPLEMENTATION_SUMMARY.md  check_gemini.py  list_models.py  pyproject.toml  requirements.txt  requirements_ml.txt  setup_all.bat  setup_all.sh  setup_gemini.bat  setup_gemini.sh
analytics/duckdb/: build_agg.py
backend/: README_API.md  main.py  run.py
backend/routers/: assessment.py  health.py
backend/scripts/: analyze_data_quality.py  check_raw_data.py  compare_models.py  debug_data_analysis.py  (+15 more)
contracts/: README.md  __init__.py  schemas.py  types.ts
docs/: 01_data_standardization.md  02_olap_duckdb_plan.md  03_medical_modeling_plan.md  06_project_plan_detailed.md  clinical_governance_checklist.md  data_dictionary.md  demo_storyboard.md  metrics_and_reporting.md  olap_implementation.md  olap_queries.md  olap_summary.md  output_contract.md  risk_copywriting_library.md  threshold_notes.md  ui_flow_spec.md
frontend/: DASHBOARD_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  index.html  package-lock.json  package.json
scripts/: run_all.bat  standardize.py  verify_setup.py
(+47 files in other folders)
